# i3ctl

./: Cargo.toml  README.md
src/: main.rs  settings.rs
