[package]
name = "i3ctl"
description = "A command line app to control i3"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
i3ipc = { version = "0.10", features = ["i3-next"] }
structopt = "0.2.14"
log = "0.4.6"
pretty_env_logger = "0.3.0"
clap-verbosity-flag = "0.2.0"
config = "0.9.2"
serde = { version = "1.0.89", features = ["derive"] }
directories = "1.0.2"
